--- a/src/main/resources/assets/oresplus/lang/en_us.json
+++ b/src/main/resources/assets/oresplus/lang/en_us.json
@@ -14,6 +14,8 @@
 	"item.oresplus.ruby_boots": "Ruby Boots",
 	"item.oresplus.obxidian_dust": "\u00A7dObxidian Dust",
 	"block.oresplus.ruby_ore": "Ruby Ore",
+	"block.oresplus.fusion_crafter": "Fusion Crafter",
+	"screen.oresplus.fusion_crafter": "Fusion Crafter",
 	"block.oresplus.enpowered_crystal_ore": "\u00A7dEnpowered Crystal Ore",
 	"item.oresplus.enpowered_crystal_shard": "\u00A7dEnpowered Crystal Shard",
 	"item.oresplus.enpowered_obxidian_ingot": "\u00A7eEnpowered Obxidian Ingot",
