--- a/src/main/resources/assets/oresplus/lang/en_us.json
+++ b/src/main/resources/assets/oresplus/lang/en_us.json
@@ -15,8 +15,11 @@
 	"item.oresplus.obxidian_dust": "\u00A7dObxidian Dust",
 	"item.oresplus.molten_aluminium_bucket": "Molten Aluminium Bucket",
 	"block.oresplus.ruby_ore": "Ruby Ore",
+	"block.oresplus.purple_fungus": "Purple Fungus",
 	"block.oresplus.fusion_crafter": "Fusion Crafter",
+	"block.oresplus.mega_fusion_crafter": "\u00A7dMega Fusion Crafter",
 	"screen.oresplus.fusion_crafter": "Fusion Crafter",
+	"screen.oresplus.mega_fusion_crafter": "Mega Fusion Crafter",
 	"block.oresplus.enpowered_crystal_ore": "\u00A7dEnpowered Crystal Ore",
 	"item.oresplus.enpowered_crystal_shard": "\u00A7dEnpowered Crystal Shard",
 	"item.oresplus.enpowered_obxidian_ingot": "\u00A7eEnpowered Obxidian Ingot",
