--- a/src/main/resources/assets/oresplus/lang/en_us.json
+++ b/src/main/resources/assets/oresplus/lang/en_us.json
@@ -18,6 +18,12 @@
 	"block.oresplus.purple_fungus": "Purple Fungus",
 	"block.oresplus.fusion_crafter": "Fusion Crafter",
 	"block.oresplus.mega_fusion_crafter": "\u00A7dMega Fusion Crafter",
+	"block.oresplus.redwood_log": "Redwood Log",
+	"block.oresplus.redwood_planks": "Redwood Planks",
+	"block.oresplus.redwood_wood": "Redwood Wood",
+	"block.oresplus.stripped_redwood_log": "Stripped Redwood Log",
+	"block.oresplus.stripped_redwood_wood": "Stripped Redwood Wood",
+	"block.oresplus.redwood_leaves": "Redwood Leaves",
 	"screen.oresplus.fusion_crafter": "Fusion Crafter",
 	"screen.oresplus.mega_fusion_crafter": "Mega Fusion Crafter",
 	"block.oresplus.enpowered_crystal_ore": "\u00A7dEnpowered Crystal Ore",
