--- a/src/main/resources/assets/oresplus/lang/en_us.json
+++ b/src/main/resources/assets/oresplus/lang/en_us.json
@@ -3,6 +3,7 @@
 	"itemGroup.oresplusgroup": "Ores+",
 	"itemGroup.oresplustoolsgroup": "Ores+ Tools",
 	"itemGroup.oresplusarmorgroup": "Ores+ Armor",
+	"itemGroup.oresplusfarmgroup": "Ores+ Farming",
 	"item.oresplus.ruby_axe": "Ruby Axe",
 	"item.oresplus.ruby_sword": "Ruby Sword",
 	"item.oresplus.ruby_pickaxe": "Ruby Pickaxe",
@@ -24,6 +25,8 @@
 	"block.oresplus.stripped_redwood_log": "Stripped Redwood Log",
 	"block.oresplus.stripped_redwood_wood": "Stripped Redwood Wood",
 	"block.oresplus.redwood_leaves": "Redwood Leaves",
+	"block.oresplus.redwood_sapling": "Redwood Sapling",
+	"block.oresplus.corn_crop": "Corn",
 	"screen.oresplus.fusion_crafter": "Fusion Crafter",
 	"screen.oresplus.mega_fusion_crafter": "Mega Fusion Crafter",
 	"block.oresplus.enpowered_crystal_ore": "\u00A7dEnpowered Crystal Ore",
